Cursor changes to resize asset shelf even when asset shelf is collapsed #116196

Closed
opened 2023-12-14 17:34:39 +01:00 by Dalai Felinto · 4 comments

Blender Version
Broken: version: 4.0.3 Release Candidate, branch: blender-v4.0-release, commit date: 2023-12-06 08:16, hash: c40f63bb98b9
Worked: -

Short description of error
Blender allows me to resize the asset shelf even when it is collapsed. That interfere with animating (when the gizmos are also close to the bottom of the viewport).

Exact steps for others to reproduce the error

  • Add an armature
  • Go to pose mode
  • Move the mouse close to the bottom edge

The cursor changes, allowing you to bring the asset shelf up.

image

**Blender Version** Broken: version: 4.0.3 Release Candidate, branch: blender-v4.0-release, commit date: 2023-12-06 08:16, hash: `c40f63bb98b9` Worked: - **Short description of error** Blender allows me to resize the asset shelf even when it is collapsed. That interfere with animating (when the gizmos are also close to the bottom of the viewport). **Exact steps for others to reproduce the error** * Add an armature * Go to pose mode * Move the mouse close to the bottom edge The cursor changes, allowing you to bring the asset shelf up. ![image](/attachments/7e8f19dc-93ba-4aa8-b4fe-82dab24f8e5b)
286 KiB
Dalai Felinto added this to the Brush Assets & Asset Shelf project 2023-12-14 17:34:42 +01:00
Julian Eisel was assigned by Dalai Felinto 2023-12-14 17:34:58 +01:00
Author
Owner

Julian I assigned this to you. If you think you won't be able to look at this please unassign yourself.

Julian I assigned this to you. If you think you won't be able to look at this please unassign yourself.
Member

Don't have the time to test properly right now, but I think we should do this:

diff --git a/source/blender/editors/screen/area.cc b/source/blender/editors/screen/area.cc
index 1b9ceef4c04..7bdf14d79ef 100644
--- a/source/blender/editors/screen/area.cc
+++ b/source/blender/editors/screen/area.cc
@@ -1074,6 +1074,11 @@ static bool region_azone_edge_poll(const ARegion *region, const bool is_fullscre
   if (region->flag & RGN_FLAG_POLL_FAILED) {
     return false;
   }
+  if ((region->alignment & (RGN_SPLIT_PREV | RGN_ALIGN_HIDE_WITH_PREV) && region->prev) &&
+      region->prev->flag & (RGN_FLAG_HIDDEN | RGN_FLAG_TOO_SMALL))
+  {
+    return false;
+  }
 
   const bool is_hidden = (region->flag & (RGN_FLAG_HIDDEN | RGN_FLAG_TOO_SMALL));
 

Don't have the time to test properly right now, but I think we should do this: ```diff diff --git a/source/blender/editors/screen/area.cc b/source/blender/editors/screen/area.cc index 1b9ceef4c04..7bdf14d79ef 100644 --- a/source/blender/editors/screen/area.cc +++ b/source/blender/editors/screen/area.cc @@ -1074,6 +1074,11 @@ static bool region_azone_edge_poll(const ARegion *region, const bool is_fullscre if (region->flag & RGN_FLAG_POLL_FAILED) { return false; } + if ((region->alignment & (RGN_SPLIT_PREV | RGN_ALIGN_HIDE_WITH_PREV) && region->prev) && + region->prev->flag & (RGN_FLAG_HIDDEN | RGN_FLAG_TOO_SMALL)) + { + return false; + } const bool is_hidden = (region->flag & (RGN_FLAG_HIDDEN | RGN_FLAG_TOO_SMALL)); ```
Author
Owner

@JulianEisel it works for me

@JulianEisel it works for me
Member

That change tests out okay. Do you want me to put that in?

That change tests out okay. Do you want me to put that in?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-20 01:21:32 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116196
No description provided.