Fix #116196: Edge selection with hidden Asset Shelf

When the Asset shelf is active but hidden, the mouse cursor will give
feedback about a moveable edge above the asset shelf area. This just
alters `region_azone_edge_poll` to check for edges belonging to
regions that hide with a previous region that is now hidden.

Pull Request: https://projects.blender.org/blender/blender/pulls/116233